new consume formats (json+xml)
