# doc/swagger.yaml
@@ -3,7 +3,7 @@ info:
   title: API de Chat
   description: >-
     ## API desenvolvida como APS de Redes da UNIP no 5.o Semestre de Ciências da Computação (Jan/2017).
-  version: '0.1'
+  version: '0.1beta'
   contact:
     name: Eduardo Araujo
     url: http://github.com/eduardoaraujo9
@@ -16,6 +16,8 @@ produces:
   - application/xml
   - text/plain
   - text/html
+consumes:
+  - application/x-www-form-urlencoded
 paths:
   /login:
     post:
@@ -23,11 +25,6 @@ paths:
         - Login
       summary: Registra um usuário no sistema.
       description: Valida o email e a senha de um usuário, recebe um token de acesso.
-      produces:
-        - application/json
-        - application/xml
-        - text/plain
-        - text/html
       parameters:
         - name: email
           in: formData
@@ -39,6 +36,7 @@ paths:
           description: senha do usuario
           required: true
           type: string
+          format: password
       responses:
         '200':
           description: Token de Acesso
@@ -48,108 +46,10 @@ paths:
           description: Acesso Negado
           schema:
             $ref: '#/definitions/Error'
-  /mensagem:
-    post:
-      tags:
-        - Mensagem
-      summary: Registra um usuário no sistema.
-      description: Valida o email e a senha de um usuário, recebe um token de acesso.
-      produces:
-        - application/json
-        - application/xml
-        - text/plain
-        - text/html
-      parameters:
-        - name: id
-          in: formData
-          description: email do usuario
-          required: true
-          type: string
-        - name: msg
-          in: formData
-          description: senha do usuario
-          required: true
-          type: string
-      responses:
-        '200':
-          description: Matriz de funcionários
-          schema:
-            $ref: '#/definitions/Funcionario'
-        default:
-          description: Erro inesperado
-          schema:
-            $ref: '#/definitions/Error'
-      security:
-        - api_key: []
-    get:
-      tags:
-        - Mensagem
-      summary: Registra um usuário no sistema.
-      description: Valida o email e a senha de um usuário, recebe um token de acesso.
-      produces:
-        - application/json
-        - application/xml
-        - text/plain
-        - text/html
-      parameters:
-        - name: email
-          in: formData
-          description: email do usuario
-          required: true
-          type: string
-        - name: senha
-          in: formData
-          description: senha do usuario
-          required: true
-          type: string
-      responses:
-        '200':
-          description: Matriz de funcionários
-          schema:
-            $ref: '#/definitions/Funcionario'
-        default:
-          description: Erro inesperado
-          schema:
-            $ref: '#/definitions/Error'
-      security:
-        - api_key: []
-  /getter:
-    get:
-      tags:
-        - Get
-      summary: Registra um usuário no sistema.
-      description: Valida o email e a senha de um usuário, recebe um token de acesso.
-      produces:
-        - application/json
-        - application/xml
-        - text/plain
-        - text/html
-      parameters:
-        - name: get1
-          in: path
-          description: email do usuario
-          required: true
-          type: string
-        - name: get2
-          in: path
-          description: senha do usuario
-          required: false
-          type: string
-      responses:
-        '200':
-          description: Matriz de funcionários
-          schema:
-            $ref: '#/definitions/Funcionario'
-        default:
-          description: Erro inesperado
-          schema:
-            $ref: '#/definitions/Error'
-      security:
-        - api_key: []        
 securityDefinitions:
-  api_key:
+  access_token:
     type: apiKey
-    description: usar a chave de api `test-key`
+    description: Chave identificadora do cliente, obtida agravés da `API de Login`
     name: access_token
     in: header
 definitions:
@@ -191,7 +91,14 @@ definitions:
       code:
         type: integer
         format: int32
+        description: Código do erro.
+      desc:
+        type: string
+        description: Descrição curta do erro.
       message:
         type: string
+        description: Descrição detalhada do erro.
       fields:
         type: string
+        description: Parâmetros referentes ao erro
+
